--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 ### Personal Files ###
 chromedriver*
-Personal-Data
+Personal-Data.txt
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
